--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fkptjax"
-version = "0.2.1"
+version = "0.3.0dev"
 description = "Perturbation theory calculations for LCDM and Modified Gravity theories using fk-Kernels implemented in Python with JAX"
 readme = "README.md"
 requires-python = ">=3.10"
